--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -26,7 +26,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Précédent"
+            android:text="Previous"
             android:visibility="invisible"
             android:backgroundTint="@color/colorPrimary"/>
 
@@ -64,7 +64,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Suivant"
+            android:text="Next"
             android:backgroundTint="@color/colorPrimary"
             android:textColor="@color/white"/>
     </LinearLayout>
