--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -18,7 +18,7 @@
         android:id="@+id/splashQuote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="« La santé, c’est la première richesse. »"
+        android:text="@string/splash_quote"
         android:textSize="18sp"
         android:textStyle="italic"
         android:textColor="@color/black"
