--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="primaryDark">#3700B3</color>
     <color name="primaryLight">#BB86FC</color>
     <color name="grayDark">#424242</color>
+    <color name="green_completed">#4CAF50</color>
 
         <color name="colorPrimary">#009688</color>
         <color name="colorPrimaryDark">#009688</color>
