--- a/app/src/main/res/layout/menu_drawer.xml
+++ b/app/src/main/res/layout/menu_drawer.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -19,7 +21,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_notifications"
-            android:tint="#009688"/>
+            app:tint="#009688" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -43,7 +45,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_settings"
-            android:tint="#009688"/>
+            app:tint="#009688" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -67,7 +69,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_info"
-            android:tint="#009688"/>
+            app:tint="#009688" />
 
         <TextView
             android:layout_width="wrap_content"
