--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Login"
+                android:text="Connexion"
                 android:textColor="#009688"
                 android:textSize="28sp"
                 android:textStyle="bold"
@@ -56,7 +56,7 @@
                     android:id="@+id/usernameEditText"
                     android:layout_width="match_parent"
                     android:layout_height="52dp"
-                    android:hint="Username"
+                    android:hint="Nom d'utilisateur"
                     android:background="@android:color/transparent"
                     android:padding="14dp"
                     android:textSize="16sp"/>
@@ -84,7 +84,7 @@
                     android:id="@+id/passwordEditText"
                     android:layout_width="match_parent"
                     android:layout_height="52dp"
-                    android:hint="Password"
+                    android:hint="Mot de passe"
                     android:inputType="textPassword"
                     android:background="@android:color/transparent"
                     android:padding="14dp"
@@ -98,7 +98,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="24dp"
                 android:backgroundTint="#009688"
-                android:text="Login"
+                android:text="Connexion"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp"
                 android:textAllCaps="false"/>
@@ -108,7 +108,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Not yet registered? Sign Up"
+                android:text="Pas encore inscrit ? S’inscrire"
                 android:textColor="#009688"
                 android:textSize="16sp"
                 android:layout_marginTop="20dp"
