--- a/app/src/main/res/layout/fragment_onboarding3.xml
+++ b/app/src/main/res/layout/fragment_onboarding3.xml
@@ -22,9 +22,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="Digital Prescription Manager"
+        android:text="Gestionnaire Numérique d'Ordonnances"
         android:textColor="#009688"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         tools:ignore="HardcodedText" />
 
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:lineSpacingExtra="4dp"
-        android:text="Store and organize all your prescriptions in one secure place"
+        android:text="Stockez et organisez toutes vos ordonnances en un seul endroit sécurisé"
         android:textColor="#000000"
         android:textSize="16sp"
         tools:ignore="HardcodedText" />
