--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -13,4 +13,19 @@
         <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
+    <!-- Add these inside your <resources> tag -->
+    <style name="CalendarDateText" parent="android:TextAppearance">
+        <item name="android:textColor">#00897B</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="CalendarWeekDayText" parent="android:TextAppearance">
+        <item name="android:textColor">#00897B</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="CalendarSelectedDate" parent="android:TextAppearance">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/bg_selected_date</item>
+    </style>
 </resources>
